# C-structures

./: .gitignore  CMakeLists.txt  Makefile  README  heap.c  heap.h  stack.c  stack.h  test.c
src/: CMakeLists.txt  Makefile  heap.c  heap.h  list.c  list.h  mheap.c  mlib.h  mlist.c  mlist.h  mstack.c  mstack.h  mstring.c  mstring.h  stack.c  stack.h
src/mlib/: mstring.h
tests/: CMakeLists.txt  printer.c  printer.h  test.c
